//   ideDir.set(file(properties("platformIdeDir"))) update gradle.properties setting removed platformIdeDir