@@ -114,10 +114,7 @@ tasks {
     }
 
     runIde {
-        var phpStormDir = File("~/.PhpStorm2022.3.3/")
-        logger.debug("phpStormDir {} does exists: {}", phpStormDir.name, phpStormDir.isDirectory );
-        jvmArgs("-Xmx2024m", "-Xms512m", "-XX:MaxPermSize=500m", "-ea")
-        ideDir.set(file(properties("platformIdeDir")))
+        jvmArgs("-Xmx2024m", "-Xms512m", "-ea")
     }
 
     // Configure UI tests plugin
